# static-file-index

./: .gitignore  CMakeLists.txt  README.md  apindex.py  pyproject.toml
.github/workflows/: cmake-multi-platform.yml
share/apindex/: index.template.html
test/: index.html
test/+Plus/: +file  index.html
